# learning-django-project

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  start.sh
app/app/: settings.py  urls.py
app/placticeapi/: apps.py  urls.py  views.py
app/placticeapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/placticeapp/migrations/: 0001_initial.py  0002_person_created_at_person_updated_at.py
app/placticeapp/templates/placticeapp/: base.html  person_edit.html  person_list.html
app/placticebatch/: apps.py
app/placticebatch/management/commands/: command_1.py
