[tool.poetry]
name = "app"
version = "0.1.0"
description = "practice django"
authors = ["HIR0-728 <70585820+HIR0-728@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
